added background images

--- a/hood/templates/bar.html
+++ b/hood/templates/bar.html
@@ -1,4 +1,6 @@
-<nav id="sidebar" class="">
+<!-- <nav id="sidebar" class="" style="min-width: 250px; max-width: 250px; padding-right:10px; background: #1a3e59;  color: #fff;  position: -webkit-sticky; position: sticky;
+top: 0;transition: all 0.3s;
+            ">
     <div class="sidebar-header ">
         <h3><a href="{% url 'index' %}">Hood Watch</a></h3>
         <strong><i class="fas fa-home"></i></strong>
@@ -41,8 +43,8 @@
         {% endif %}
     </ul>
     <div class="logout ml-2 mr-2 ">
-        <a href="{% url 'logout' %}" class="btn btn-sm btn-outline-danger d-block mx-auto"> Logout</a>
+        <a href="{% url 'logout' %}" class=""> Logout</a>
     </div>
 
     {% endif%}
-</nav>
+</nav> -->
