--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+ @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 body {
     font-family: 'Poppins', sans-serif;
     background: #fafafa;
@@ -61,8 +61,8 @@ span {
 
 .wrapper {
     display: flex;
-    align-items: stretch;
-}
+    align-items: stretch; 
+ }
 .tt{
     color:#1a3e59;
 }
@@ -78,12 +78,25 @@ span {
     min-width: 250px;
     max-width: 250px;
     padding-right:10px;
+     background: #1a3e59; 
+     color: #fff;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    transition: all 0.3s;
+}
+
+.side{
+    min-width: 250px;
+    max-width: 250px;
+    padding-right:10px;
     background: #1a3e59;
     color: #fff;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
     transition: all 0.3s;
+
 }
 
 #sidebar.active {
@@ -182,7 +195,7 @@ ul ul a {
     font-size: 0.9em !important;
     padding-left: 30px !important;
     background: #6d7fcc;
-}
+} 
 
 ul.CTAs {
     padding: 20px;
