--- a/hood/templates/navbar.html
+++ b/hood/templates/navbar.html
@@ -1,5 +1,5 @@
 
-            <nav class="navbar navbar-expand-lg navbar-dark">
+            <nav class="navbar navbar-expand-lg navbar-dark" style="padding: 20px 10px; background-color: #35495e; border: none;  margin-bottom: 40px; box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);">
                 <div class="container-fluid">
                     <button type="button" id="sidebarCollapse" class="btn btn-sm btn-info">
                         <i class="fas fa-align-left"></i>
