edited bar teemplates

--- a/hood/templates/bar.html
+++ b/hood/templates/bar.html
@@ -1,4 +1,4 @@
-<nav id="sidebar" class="" style="min-width: 250px; max-width: 250px; padding-right:10px; background: #1a3e59;  color: #fff;  position: -webkit-sticky; position: sticky;
+<!-- <nav id="sidebar" class="" style="min-width: 250px; max-width: 250px; padding-right:10px; background: #1a3e59;  color: #fff;  position: -webkit-sticky; position: sticky;
 top: 0;transition: all 0.3s;
             ">
     <div class="sidebar-header ">
@@ -47,4 +47,4 @@ top: 0;transition: all 0.3s;
     </div>
 
     {% endif%}
-</nav>
+</nav> -->
