--- a/hood/templates/navbar.html
+++ b/hood/templates/navbar.html
@@ -1,12 +1,12 @@
 
             <nav class="navbar navbar-expand-lg navbar-dark" style="padding: 20px 10px; background-color: #35495e; border: none;  margin-bottom: 40px; box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);">
                 <div class="container-fluid">
-                    <button type="button" id="sidebarCollapse" class="btn btn-sm btn-info">
+                    <!-- <button type="button" id="sidebarCollapse" class="btn btn-sm btn-info">
                         <i class="fas fa-align-left"></i>
                     </button>
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-align-justify"></i>
-                    </button>
+                    </button> -->
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
