--- a/hood/templates/base.html
+++ b/hood/templates/base.html
@@ -26,7 +26,7 @@
     <div class="wrapper">
         {% include 'bar.html' %}
         <div id="content" style="background-image: url({% static 'images/background.jpg' %}); background-repeat:no-repeat;background-size:cover">
-        
+            {% include 'navbar.html' %}
 
           {% block content %}
 
